[package]
name = "pratdiff"
description = "A colorfull diff tool based on the patience diff algorithm"
repository = "https://github.com/fowles/pratdiff"
version = "0.1.7"
edition = "2021"
license = "Apache-2.0"
keywords = ["diff", "patience"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
exclude = [
    "src/testdata",
    "docs",
]

[dependencies]
anstream = "0.6.18"
cfg-if = "1.0.0"
clap = { version = "4.5.38", features = ["derive", "help", "usage", "suggestions", "color"] }
clap_complete = "4.5.50"
clap_complete_command = "0.6.1"
common-path = "1.0.0"
owo-colors = "4.2.1"
regex = "1.11.1"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.20.0"
