[package]
name = "pratdiff"
description = "A colorfull diff tool based on the patience diff algorithm"
repository = "https://github.com/fowles/pratdiff"
version = "0.1.9"
edition = "2024"
license = "Apache-2.0"
keywords = ["diff", "patience"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
exclude = [
    "src/testdata",
    "docs",
]

[dependencies]
anstream = "0.6.20"
cfg-if = "1.0.3"
clap = { version = "4.5.47", features = ["derive", "help", "usage", "suggestions", "color"] }
clap_complete = "4.5.57"
clap_complete_command = "0.6.1"
common-path = "1.0.0"
owo-colors = "4.2.2"
regex = "1.11.2"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.21.0"
