[package]
name = "pratdiff"
description = "A colorfull diff tool based on the patience diff algorithm"
repository = "https://github.com/fowles/pratdiff"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
keywords = ["diff", "patience"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
exclude = [
    "src/testdata",
    "docs",
]

[dependencies]
anstream = "1.0.0"
cfg-if = "1.0.4"
clap = { version = "4.6.0", features = ["derive", "help", "usage", "suggestions", "color"] }
clap_complete = "4.6.0"
clap_complete_command = "0.6.1"
common-path = "1.0.0"
owo-colors = "4.3.0"
unicode-segmentation = "1.12.0"
regex = "1.12.3"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
